--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,3 @@
 {
-  "version": 2,
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
-  ],
-  "env": {
-    "VITE_API_URL": "https://portfolio-backend-79t2.onrender.com"
-  }
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
