--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
- 
- "name":"vite",
+  "name": "vite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.26.0",
     "styled-components": "^6.1.12"
   },
